clusters/building-blocks/edge/apps/fritzbox-cloudflare-dyndns/app/fritzbox-cloudflare-dyndns-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fritzbox-cloudflare-dyndns
  namespace: edge
  labels:
    app.kubernetes.io/name: fritzbox-cloudflare-dyndns
spec:
  selector:
    app.kubernetes.io/name: fritzbox-cloudflare-dyndns
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
