clusters/building-blocks/edge/apps/fritzbox-cloudflare-dyndns/app/fritzbox-cloudflare-dyndns-ingressroute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fritzbox-cloudflare-dyndns
  namespace: edge
  labels:
    app: fritzbox-cloudflare-dyndns
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`dyndns.home.${DOMAIN_NAME}`)
      priority: 10
      middlewares:
        - name: gateway-only-ipallowlist
          namespace: edge
      services:
        - kind: Service
          name: fritzbox-cloudflare-dyndns
          namespace: edge
          passHostHeader: true
          port: 8080
